--- a/analysis/collaborator-analysis.qmd
+++ b/analysis/collaborator-analysis.qmd
@@ -1,5 +1,21 @@
 ---
 title: "collaborator-analysis"
 format: html
+author: maggie
 ---
+## Exercise: Explore, Clean, and Wrangle Data
+
+### load packages
+```{r}
+library(readr)
+library(dplyr)
+library(ggplot2)
+library(tidyr)
+library(here)
+```
+
+### load data
+```{r}
+lobster_traps <- read_csv(here::here("Data/Lobster_Trap_Counts_All_Years_20210519.csv"))
+```
 
